2000-07-13  Peter Williams  <peterw@helixcode.com>

	* camel-object.c: Rewritten to not be based on GtkObject,
	but a tiny threadsafe ripoff thereof. Objects still cannot
	be shared across threads, but ref/unref/destroy/new/etc
	will work. Signals are not implemented because doing it
	robustly would be a major pain in the butt, but class
	functions are. There's a small demonstration that it doesn't
	crash in ./temp-test.c: build it with ./make-test.sh.
	* camel-stream.c, camel-seekable-stream.c, camel-stream-mem.c:
	moved over to CamelObject. Proof of concept: two levels of
	subclass and class functions, all working without coredumps.
	To port to CamelObject:
	- s,GTK_,CAMEL_,g in the cast checks
	- s,gtk_type_new,camel_object_new,g
	- s,GtkType,CamelType,g
	- Change get_type function over to camel_type_declare
	- instead of hooking to finalize function, it goes into the
	  type declaration.
	- remove signals.
	- instead of GTK_OBJECT(so)->klass, CAMEL_OBJECT_GET_CLASS(so)
	- s,gtk_type_object,camel_type_get_global_classfuncs,g
	- don't chain finalize handlers; it will be done for you
	
2000-07-11  Dan Winship  <danw@helixcode.com>

	* camel-folder.c: Remove exceptions from a number of methods
	that work on what ought to be static data: get_parent_folder,
	get_parent_store, get_message_count, get_unread_message_count,
	get_permanent_flags, get_message_flags, set_message_flags,
	get_message_user_flag, set_message_user_flag, get_message_uid,
	get_uids, get_summary, get_subfolder_names. Turn
	camel_folder_delete_message into a macro.

	* providers/{mbox,pop3,vee}: Update for CamelFolder changes

	* providers/Makefile.am: Disable imap and nntp for now

2000-07-10  Jeffrey Stedfast  <fejj@helixcode.com>

	* camel-folder-summary.c (camel_folder_summary_decode_string): 
	Oops, an unsigned integer can never be < 0

2000-07-10  Dan Winship  <danw@helixcode.com>

	* providers/vee/camel-vee-folder.c (vee_search_by_expression):